--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>My first github repo</title>
+    <h1>Just test myself</h1>
+    <p>lorem15</p>
 </head>
 <body>
     
