--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <title>My first github repo</title>
     <h1>Just test myself</h1>
-    <p>lorem15</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam maiores iusto, beatae temporibus quod earum!</p>
 </head>
 <body>
     
