--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <title>My first github repo</title>
     <h1>Just test myself</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam maiores iusto, beatae temporibus quod earum!</p>
+    <p>Lorem ipsum dolor sit amet.</p>
 </head>
 <body>
     
